@startuml

title __THE_MTP_CHASER.APP's Class Diagram__\n

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.BackgroundMusicService {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.BatteryReceiver {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.BuildConfig {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.HomeActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.InstructionsActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.LoginActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.LoginAdapter {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.LoginTabFragment {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.MainActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.QuesSuper {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.Question {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.QuizActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.ScoreActivity {
    }
  }
  

  namespace com.matan.themtpchaser {
    class com.matan.themtpchaser.SignUpTabFragment {
    }
  }
  

  com.matan.themtpchaser.BackgroundMusicService -up-|> android.app.Service
  com.matan.themtpchaser.BatteryReceiver -up-|> android.content.BroadcastReceiver
  com.matan.themtpchaser.HomeActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.InstructionsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.LoginAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.matan.themtpchaser.LoginTabFragment -up-|> androidx.fragment.app.Fragment
  com.matan.themtpchaser.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.MainActivity o-- com.matan.themtpchaser.BatteryReceiver : batteryReceiver
  com.matan.themtpchaser.Question -up-|> com.matan.themtpchaser.QuesSuper
  com.matan.themtpchaser.QuizActivity .up.|> android.view.View.OnClickListener
  com.matan.themtpchaser.QuizActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.ScoreActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.matan.themtpchaser.SignUpTabFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
